tests/snapshots/scripts_sanitized/Admin API Tool/Utility - ID 32/Handle response DAPI - ID 84.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Handle parsing the response, error trapping
#  HISTORY:
     - Created:   2018-05-09 by Mike Duncan (mduncan@soliantconsulting.com)
     - Modified:  2019-04-23 by Mike Duncan, update to v2 admin api

Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Variable setzen [ $my.response ; Austauschen ( HoleWert ( $$my.headers ; 1 ) ; "HTTP/1.1 " ; "" ) ]
Wenn [ $my.response = "200 OK" ]
	# refresh token timeout
	Feldwert setzen [ FMS__fmserver::dapi_token_expires ; Hole ( SystemZeitstempel ) + ( 15 * 60 ) ]
	Wenn [ $$API.UPDATE = 1 ]
		# check json result
		Wenn [ JSONGetElement ( $$my.result ; "messages[0].code" ) = "0" ]
			Variable setzen [ $$UI.MESSAGE ; "Config Saved." ]
			Layoutobjekt-Animation festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "168" ] ⚠️⚠️⚠️
			// Gehe zu Objekt [ "stage_left" ]
			Gehe zu Objekt [ "stage_center" ]
			Layoutobjekt-Animation festlegen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "168" ] ⚠️⚠️⚠️
			Scriptpause setzen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "62" ] ⚠️⚠️⚠️
			Popover schließen
		Ende (wenn)
	Ende (wenn)
	# clear api update variable
	Variable setzen [ $$API.UPDATE ; "" ]
	
	
Sonst, wenn [ $my.response = "401 Unauthorized" ]
	# try to log in
	Eigenes Dialogfeld anzeigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "87" ] ⚠️⚠️⚠️
	Variable setzen [ $error ; "401" ]
	
Sonst
	# error trap
	Eigenes Dialogfeld anzeigen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "87" ] ⚠️⚠️⚠️
	Variable setzen [ $error ; $my.response ]
	
Ende (wenn)

Feldwert setzen [ FMS__fmserver::zz_result_g ; $$my.result ]
Feldwert setzen [ FMS__fmserver::zz_headers_g ; $$my.headers ]

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
