tests/snapshots/scripts_sanitized/Admin API Tool/Utility - ID 32/Set Config - ID 35.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Set config variables
#  HISTORY:&#13;   - Created:   2018-05-09 by Mike Duncan (mduncan@soliantconsulting.com)&#13;   - Modified:  2018-MM-DD by FName LName

Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Wenn [ IstLeer ( FMS__fmserver::server_address ) ]
	Fehlerton
	Gehe zu Feld [ Auswählen/Ausführen ; FMS__fmserver::server_address ]
	Alle Scripts abbrechen
Ende (wenn)

Variable setzen [ $$server ; "https://" & FMS__fmserver::server_address & Falls ( FMS__fmserver::usePort = 1 ; ":16000" ) & "/fmi/admin/api/v2" ]
Variable setzen [ $$my.token ; FMS__fmserver::token ]
Variable setzen [ $$my.token_expires ; FMS__fmserver::token_expires ]
Wenn [ IstLeer ( $$my.token )
				ODER
				Hole ( SystemZeitstempel ) > $$my.token_expires ]
	Script ausführen [ Aus Liste ; "Request Access Token" ]
Ende (wenn)


# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
