tests/snapshots/scripts_sanitized/Admin API Tool/Utility - ID 32/View Admin API Guide - ID 162.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: link to documentation hosted on server
#  HISTORY:
				   - Created:   2018-05-09 by Mike Duncan (mduncan@soliantconsulting.com)
				   - Modified:  2018-MM-DD by FName LName

Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Variable setzen [ $$server ; FMS__fmserver::server_address ]
URL öffnen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "111" ] ⚠️⚠️⚠️


# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
